Make final tweaks to ensure first Stage 2 trial in main shows key instruction prompt, add end point total display, move reward message to bottom to prevent shifting image displays, change reward message font color

--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,7 @@ p {
 .reward-img {
     height: 75px;
     width: auto;
+    max-width: 125px
     /* max-width: 200px;
     max-height: auto;
     object-fit: cover; */
@@ -102,4 +103,18 @@ p {
   height: 200px;
   margin: 0 75px;
   
+}
+
+#key-instruction {
+    
+}
+
+/* #reward-container {
+    border: 5px, solid, cadetblue;
+} */
+
+#reward-message {
+    /* color:mediumslateblue; */
+    /* color:darkmagenta; */
+    color:midnightblue;
 }
